<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="wrap_content">

        <androidx.cardview.widget.CardView
            android:id="@+id/cv1"
            android:layout_width="100dp"
            android:layout_height="130dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="20dp">

            <ImageView
                android:id="@+id/ivPoster"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="centerCrop" />
        </androidx.cardview.widget.CardView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:layout_toEndOf="@id/cv1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/detailTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/title"
                android:textColor="@color/blue_700"
                android:textSize="22sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="Vote Avarage" />

            <TextView
                android:id="@+id/voteAvg"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="8.2" />


        </LinearLayout>

        <androidx.cardview.widget.CardView

            android:elevation="3dp"
            android:layout_margin="15dp"
            android:layout_below="@id/cv1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_margin="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="Overview" />

                <TextView
                    android:id="@+id/descDetail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/title"
                    android:textColor="@color/blue_700"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="Date" />

                <TextView
                    android:id="@+id/dateDetail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="0000-00-00" />


            </LinearLayout>

        </androidx.cardview.widget.CardView>

</RelativeLayout>