package com.tik.moviecatalogue.ui.home

import EspressoIdlingResource
import androidx.recyclerview.widget.RecyclerView
import androidx.test.core.app.ActivityScenario
import androidx.test.espresso.Espresso.onView
import androidx.test.espresso.IdlingRegistry
import androidx.test.espresso.action.ViewActions
import androidx.test.espresso.action.ViewActions.click
import androidx.test.espresso.assertion.ViewAssertions.matches
import androidx.test.espresso.contrib.RecyclerViewActions
import androidx.test.espresso.matcher.ViewMatchers.*
import androidx.test.ext.junit.rules.ActivityScenarioRule
import com.tik.moviecatalogue.R
import com.tik.moviecatalogue.utils.DataDummy
import org.junit.After
import org.junit.Assert.*
import org.junit.Before
import org.junit.Rule
import org.junit.Test

class HomeActivityTest {

    private val dummyMovie = DataDummy.generateDummyMovies()
    private val dummyTv = DataDummy.generateDummyTvShow()

    @get:Rule
    var activityRule = ActivityScenarioRule(HomeActivity::class.java)

    @Before
    fun setUp() {
        ActivityScenario.launch(HomeActivity::class.java)
        IdlingRegistry.getInstance().register(EspressoIdlingResource.idlingResource)
    }

    @After
    fun tearDown() {
        IdlingRegistry.getInstance().unregister(EspressoIdlingResource.idlingResource)
    }

    @Test
    fun loadMovie() {
        onView(withId(R.id.rv_movies)).check(matches(isDisplayed()))
        onView(withId(R.id.rv_movies)).perform(
            RecyclerViewActions.scrollToPosition<RecyclerView.ViewHolder>(
                dummyMovie.size
            )
        )
    }

    @Test
    fun loadDetailMovie() {
        onView(withId(R.id.rv_movies)).perform(
            RecyclerViewActions.actionOnItemAtPosition<RecyclerView.ViewHolder>(
                0,
                click()
            )
        )
        onView(withId(R.id.detailTitle)).check(matches(isDisplayed()))
        onView(withId(R.id.voteAvg)).check(matches(isDisplayed()))
        onView(withId(R.id.descDetail)).check(matches(isDisplayed()))
        onView(withId(R.id.dateDetail)).check(matches(isDisplayed()))

    }

    @Test
    fun loadTvShow() {
        onView(withText("Tv Show")).perform(click())
        onView(withId(R.id.rv_tv_show)).check(matches(isDisplayed()))
        onView(withId(R.id.rv_tv_show)).perform(
            RecyclerViewActions.scrollToPosition<RecyclerView.ViewHolder>(
                dummyMovie.size
            )
        )
    }

    @Test
    fun loadDetailTvShow() {
        onView(withText("Tv Show")).perform(click())
        onView(withId(R.id.rv_tv_show)).perform(
            RecyclerViewActions.actionOnItemAtPosition<RecyclerView.ViewHolder>(
                1,
                click()
            )
        )
        onView(withId(R.id.detailTitle)).check(matches(isDisplayed()))
        onView(withId(R.id.voteAvg)).check(matches(isDisplayed()))
        onView(withId(R.id.descDetail)).check(matches(isDisplayed()))
        onView(withId(R.id.dateDetail)).check(matches(isDisplayed()))
    }

    @Test
    fun loadFavoritedMovie() {
        onView(withText("Movies")).perform(click())
        onView(withId(R.id.rv_movies)).perform(
            RecyclerViewActions.actionOnItemAtPosition<RecyclerView.ViewHolder>(
                0,
                click()
            )
        )
        onView(withId(R.id.action_favorited)).perform(click())
        onView(isRoot()).perform(ViewActions.pressBack())
        onView(withText("Favorite Movie")).perform(click())
        onView(withId(R.id.rv_movies_fav)).check(matches(isDisplayed()))
        onView(withId(R.id.rv_movies_fav)).perform(
            RecyclerViewActions.actionOnItemAtPosition<RecyclerView.ViewHolder>(
                0,
                click()
            )
        )
        onView(withId(R.id.detailTitle)).check(matches(isDisplayed()))
        onView(withId(R.id.voteAvg)).check(matches(isDisplayed()))
        onView(withId(R.id.descDetail)).check(matches(isDisplayed()))
        onView(withId(R.id.dateDetail)).check(matches(isDisplayed()))
        onView(withId(R.id.action_favorited)).perform(click())
    }

    @Test
    fun loadFavoritedTvShow() {
        onView(withText("Tv Show")).perform(click())
        onView(withId(R.id.rv_tv_show)).perform(
            RecyclerViewActions.actionOnItemAtPosition<RecyclerView.ViewHolder>(
                0,
                click()
            )
        )
        onView(withId(R.id.action_favorited)).perform(click())
        onView(isRoot()).perform(ViewActions.pressBack())
        onView(withText("Favorite Tv Show")).perform(click())
        onView(withId(R.id.rv_tv_show_fav)).check(matches(isDisplayed()))
        onView(withId(R.id.rv_tv_show_fav)).perform(
            RecyclerViewActions.actionOnItemAtPosition<RecyclerView.ViewHolder>(
                0,
                click()
            )
        )
        onView(withId(R.id.detailTitle)).check(matches(isDisplayed()))
        onView(withId(R.id.voteAvg)).check(matches(isDisplayed()))
        onView(withId(R.id.descDetail)).check(matches(isDisplayed()))
        onView(withId(R.id.dateDetail)).check(matches(isDisplayed()))
        onView(withId(R.id.action_favorited)).perform(click())
    }

}